--- a/src/less/main.less
+++ b/src/less/main.less
@@ -3,12 +3,12 @@ body {
   padding: 0;
   background-color: #1e1f1f;
   color: #f1f2f3;
+  font-family: 'Ubuntu', 'Helvetica Neue', sans-serif;
+  font-weight: 300;
 }
 
 .wrapper {
   height: 100vh;
-  font-family: 'Ubuntu', 'Helvetica Neue', sans-serif;
-  font-weight: 300;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -17,6 +17,7 @@ body {
 
 .main {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 
