Show new fresh 2018 logo

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #1e1f1f;
+  background-color: #000000;
   color: #f1f2f3;
   font-family: 'Ubuntu', 'Helvetica Neue', sans-serif;
   font-weight: 300;
@@ -47,4 +47,8 @@ footer {
 img {
   margin: 1rem 0;
   max-width: 100%;
+}
+
+#countdown {
+  width: 100%;
 }
