--- a/src/less/main.less
+++ b/src/less/main.less
@@ -8,7 +8,7 @@ body {
 }
 
 .wrapper {
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
