--- a/src/less/main.less
+++ b/src/less/main.less
@@ -26,12 +26,12 @@ img {
 
   .caption {
     position: absolute;
-    color: @white;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(255, 255, 255, 0.8);
     padding: 1rem;
     bottom: 0;
     right: 0;
     font-size: 0.9rem;
+    border-radius: 1rem 0 0;
 
     &::before {
       content: '📷 ';
