--- a/src/less/main.less
+++ b/src/less/main.less
@@ -105,9 +105,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 header {
-  background-color: #000000;
   height: 100vh;
+  @media (max-width: 768px) {
+    height: 90vh;
+  }
   width: 100%;
+  position: relative;
 
   display: flex;
   justify-content: center;
@@ -116,9 +119,22 @@ header {
 
   margin-bottom: 1rem;
 
+  overflow: hidden;
+  background-color: #000000;
+
   #logo {
-    max-height: 90vh;
-    max-width: 90%;
+    position: absolute;
+    height: 80%;
+    width: 50%;
+    @media (max-width: 768px) {
+      height: 90%;
+      width: 80%;
+    }
+
+    background-image: url('/images/logo-2018-transparent.png');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
   }
 }
 
