--- a/src/less/main.less
+++ b/src/less/main.less
@@ -24,7 +24,7 @@ img {
   position: relative;
   box-shadow: 0 4px 25px 0 rgba(0, 0, 0, 0.4);
 
-  .caption {
+  .attribution {
     position: absolute;
     background-color: rgba(255, 255, 255, 0.8);
     padding: 1rem;
