Add program overview

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -104,6 +104,21 @@ h1, h2, h3, h4, h5, h6 {
   margin: 2rem 0;
 }
 
+.program {
+  td {
+    padding: 0.5rem;
+    font-size: 1.5rem;
+
+    &.time {
+      font-size: 2rem;
+    }
+  }
+
+  h3 {
+    border-bottom: 4px solid @darkgreen;
+  }
+}
+
 header {
   height: 100vh;
   @media (max-width: 768px) {
