Make header underline color match countdown color

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -115,7 +115,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 
   h3 {
-    border-bottom: 4px solid @darkgreen;
+    border-bottom: 4px solid @lightgreen;
   }
 }
 
