--- a/src/less/main.less
+++ b/src/less/main.less
@@ -16,6 +16,21 @@ img {
   max-width: 100%;
 }
 
+.attribution-core {
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 1rem;
+  bottom: 0;
+  right: 0;
+  font-size: 0.8rem;
+  border-radius: 1rem 0 0;
+  @media (max-width: 768px) {
+    left: 0;
+    border-radius: 0;
+    text-align: center;
+  }
+}
+
 .divider-img-wrapper {
   width: 100%;
   height: 90vh;
@@ -25,17 +40,10 @@ img {
   box-shadow: 0 4px 25px 0 rgba(0, 0, 0, 0.4);
 
   .attribution {
-    position: absolute;
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 1rem;
-    bottom: 0;
-    right: 0;
-    font-size: 0.9rem;
-    border-radius: 1rem 0 0;
-
     &::before {
       content: '📷 ';
     }
+    .attribution-core
   }
 }
 
