Add divider between long paragraphs  to make slightly easier to read, slight touch up of text

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -16,6 +16,12 @@ img {
   max-width: 100%;
 }
 
+hr {
+  border: 0;
+  border-bottom: 1px solid @darkgreen;
+  width: 80%;
+}
+
 .attribution-core {
   position: absolute;
   background-color: rgba(255, 255, 255, 0.8);
