--- a/src/less/main.less
+++ b/src/less/main.less
@@ -24,7 +24,9 @@ hr {
 
 .attribution-core {
   position: absolute;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(0, 0, 0, 0.8);
+  color: @white;
+  text-align: right;
   padding: 1rem;
   bottom: 0;
   right: 0;
@@ -38,8 +40,12 @@ hr {
 }
 
 .divider-img-wrapper {
-  width: 100%;
-  height: 90vh;
+  width: 70%;
+  @media (max-width: 768px) {
+    width: 100%;
+  }
+  height: 40vh;
+  margin: 0 auto;
   background-position: center;
   background-size: cover;
   position: relative;
@@ -51,6 +57,12 @@ hr {
     }
     .attribution-core
   }
+}
+
+.divider-img-wrapper-full {
+  .divider-img-wrapper;
+  width: 100%;
+  height: 90vh;
 }
 
 a, a:focus, a:active, a:visited {
@@ -80,7 +92,7 @@ h1, h2, h3, h4, h5, h6 {
   align-items: center;
   justify-content: center;
 
-  > *:not(.divider-img-wrapper) {
+  > *:not(.divider-img-wrapper-full) {
     max-width: 60%;
     @media (max-width: 768px) {
       max-width: 80%;
