Remove artistic green stuff, add date to header

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -163,6 +163,12 @@ header {
   overflow: hidden;
   background-color: #000000;
 
+  .date {
+    color: @white;
+    position: absolute;
+    bottom: 0;
+  }
+
   #logo {
     position: absolute;
     height: 80%;
