Prepare for artist list and Spotify plugin

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -22,6 +22,17 @@ hr {
   width: 80%;
 }
 
+iframe {
+  border: 0;
+}
+
+#spotify-plugin {
+  min-height: 380px;
+  height: 40vh;
+  min-width: 300px;
+  width: 30%;
+}
+
 .attribution-core {
   position: absolute;
   background-color: rgba(0, 0, 0, 0.8);
@@ -130,7 +141,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 2rem 0;
 }
 
-.program {
+.program, .artists {
   td {
     padding: 0.5rem;
     font-size: 1.5rem;
