--- a/src/less/main.less
+++ b/src/less/main.less
@@ -171,6 +171,9 @@ iframe { border: none; }
     margin: 0.5rem auto;
     width: 80%;
     height: 30vh;
+    @media (min-width: 768px) {
+      height: 35vh;
+    }
 
     color: @white;
     text-shadow: @black 1px 1px 10px;
@@ -186,7 +189,7 @@ iframe { border: none; }
 
     @media (min-width: 768px) {
       &:hover {
-        .show-more-button { transform: translateY(2px); }
+        .show-more-button { transform: translateY(3px); }
       }
     }
 
