--- a/src/less/main.less
+++ b/src/less/main.less
@@ -19,7 +19,14 @@ body {
 
 img { max-width: 100%; }
 
-h1, h2, h3, h4, h5, h6 { font-family: 'Rammetto One'; }
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Rammetto One';
+
+  &.inline {
+    display: inline-block;
+    margin: 0;
+  }
+}
 
 h1, h2, h3 { border-bottom: 4px solid @lightgreen; }
 
@@ -210,7 +217,7 @@ iframe { border: none; }
       text-align: center;
       font-size: 1.5rem;
       color: @white;
-      text-shadow: @black 3px 3px 4px;
+      text-shadow: @black 1px 2px 0px;;
 
       cursor: pointer;
 
@@ -228,7 +235,8 @@ iframe { border: none; }
   }
 }
 
-header {
+#header {
+  min-height: 500px;
   height: 100vh;
   width: 100%;
   position: relative;
