Add contact emails, auto-formatting

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -44,6 +44,7 @@ a, a:focus, a:active, a:visited {
 }
 
 ul { list-style-type: square; }
+footer ul { list-style-type: none; }
 
 iframe { border: none; }
 
