Improve layout of contact info in footer

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -67,7 +67,6 @@ a:visited {
   }
 }
 
-footer ul { list-style-type: none; }
 ul {
   list-style-type: square;
 }
@@ -322,7 +321,10 @@ iframe {
   }
 }
 
-footer { padding: 1rem; }
+footer {
+  padding: 1rem;
+  text-align: center;
+}
 
 #countdown {
   margin-top: 2rem;
