Add sticky facebook icon

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -82,6 +82,18 @@ iframe {
   align-self: center;
 }
 
+#facebook-icon {
+  position: fixed;
+  bottom: 0.5rem;
+  left: 1rem;
+  font-size: 3rem;
+  @media (max-width: 768px) {
+    font-size: 2rem;
+  }
+  z-index: 10;
+  text-shadow: @black 1px 1px 3px;
+}
+
 .caption {
   text-align: center;
   padding: 1rem;
