Move stuff around, add section with booking request info

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -306,7 +306,7 @@ iframe {
   align-items: center;
   .box-shadow;
 
-  margin-bottom: 1rem;
+  // margin-bottom: 1rem; Include when there's text, not a picture, just below the logo banner
 
   overflow: hidden;
   background-color: #000000;
