--- a/src/less/main.less
+++ b/src/less/main.less
@@ -72,6 +72,11 @@ ul {
   list-style-type: square;
 }
 
+p.two-columns {
+  column-count: 2;
+  text-align: justify;
+}
+
 iframe {
   border: none;
 }
@@ -112,6 +117,7 @@ iframe {
   }
   height: 400px;
   margin: 0 auto;
+  border-radius: 1rem;
 
   background-position: center;
   background-size: cover;
@@ -138,6 +144,7 @@ iframe {
 
 .divider-img-wrapper-full {
   .divider-img-wrapper;
+  border-radius: 0;
   width: 100%;
   height: 700px;
   @media (max-width: 768px) {
@@ -163,7 +170,7 @@ iframe {
   justify-content: center;
 
   > *:not(.divider-img-wrapper-full) {
-    max-width: 60%;
+    max-width: 50%;
     @media (max-width: 768px) {
       max-width: 80%;
     }
@@ -319,7 +326,10 @@ iframe {
   .date {
     color: @white;
     position: absolute;
-    bottom: 0;
+    bottom: 5rem;
+    @media (min-width: 768px) {
+      font-size: 3rem;
+    }
   }
 
   #logo {
@@ -331,7 +341,7 @@ iframe {
       width: 80%;
     }
 
-    background-image: url("/images/logo-2018-mm-transparent.png");
+    background-image: url("/images/logo-2019.png");
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -345,7 +355,7 @@ footer {
 
 #countdown {
   margin-top: 2rem;
-  margin-bottom: -2rem;
+  margin-bottom: 2rem;
   width: 100%;
 }
 
