Fix image attribution border radiuis

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -134,7 +134,7 @@ iframe {
     bottom: 0;
     right: 0;
     font-size: 0.8rem;
-    border-radius: 1rem 0 0;
+    border-radius: 1rem 0 1rem 0;
 
     &::before {
       content: "📷 ";
@@ -144,6 +144,9 @@ iframe {
 
 .divider-img-wrapper-full {
   .divider-img-wrapper;
+  .attribution {
+    border-radius: 1rem 0 0 0;
+  }
   border-radius: 0;
   width: 100%;
   height: 700px;
