Add the last artists

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -327,12 +327,12 @@ iframe {
   font-size: 1rem;
 
   table {
-    margin: auto;
     font-size: 1.25rem;
     line-height: 1.5;
+    border-collapse: collapse;
 
     td {
-      padding: 0.25rem;
+      padding: 0.5rem;
     }
   }
 }
