--- a/src/less/main.less
+++ b/src/less/main.less
@@ -150,7 +150,7 @@ iframe {
   }
   border-radius: 0;
   width: 100%;
-  height: 700px;
+  height: 800px;
   @media (max-width: 768px) {
     height: 500px;
   }
@@ -210,6 +210,12 @@ iframe {
       }
     }
   }
+}
+
+.camp-map {
+  max-width: 90% !important;
+  margin-bottom: 2rem;
+  .box-shadow;
 }
 
 .section {
